--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,12 @@ ul {
   list-style-type: none;
 }
 
+.main {
+  width: 50%; 
+  margin: 0 auto; 
+  text-align: left;
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
